# leapfrogai-audiocontrol

./: .gitignore  Dockerfile  README.md  pyproject.toml  zarf.yaml
audiocontrol-ui/: main.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  virtualservice.yaml
chart/templates/tests/: test-connection.yaml
experiments/audiocontrol-ui/: load.py  main.py
experiments/endpoints/: main.py
experiments/plot/: .gitignore  main.py  requirements.txt
experiments/speak/: main.py
experiments/testtranscirbe/: main.py
experiments/voicerecorder/: main.py
experiments/webrecorder/: index.html
manifests/: gitrepository.yaml  helmrelease.yaml  namespace.yaml
plot/data/: aqs_monitors_clean.csv
speak/: main.py
src/: audiocontrol.py  streamlittest.py
testtranscirbe/: main.py
