[tool.poetry]
name = "leapfrogai-audiocontrol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "leapfrogai_audiocontrol"}]

[tool.poetry.dependencies]
python = "^3.10"
audio-recorder-streamlit = "^0.0.8"
streamlit = "^1.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
