[tool.poetry]
name = "leapfrogai-audiocontrol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "leapfrogai_audiocontrol"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
gtts = "^2.3.2"
streamlit = "^1.23.1"
audio-recorder-streamlit = "^0.0.8"
datefinder = "^0.7.3"
locationtagger = "^0.0.1"
folium = "^0.14.0"
plotly = "^5.15.0"
streamlit-folium = "^0.12.0"
us = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
